# spuriobot

./: .gitlab-ci.yml  README.md  ci.sh  fetch-job-data.hs  flake.nix  queries.sql  spurious-failures.cabal
gitlab-webhook/: .gitignore  CHANGELOG.md  Makefile  README.md  default.nix  flake.nix  flake.nix.alsodoesntwork  flake.nix.doesntwork  gitlab-webhook.cabal  gitlab-webhook.nix  package.yaml  shell.nix  shell.nix.inprogress  stack.yaml
gitlab-webhook/app/: Main.hs
gitlab-webhook/src/: GL.hs  GLApi.hs  GitLab.hs  GitLabApi.hs  SpuriousFailures.hs
gitlab-webhook/test/: Spec.hs
gitlab-webhook/testdata/: event.json
local-tooling/: README.md  cabal.project  cabal.project.freeze  default.nix  fetch-job-data.hs  flake.nix  gtrace  job  queries.sql  shell.nix  spread-spuriobot.hs  spurio-tooling.cabal  trace  traceHH  win-perf.sh
nix/: sources.json
nix-packaging/: spuriobot-systemd-module.nix
spuriobot/: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.freeze  db-schema.sql  flake.nix  fourmolu.yaml  spuriobot.cabal  stack.yaml
spuriobot/app/: Main.hs
spuriobot/nix/: sources.json
spuriobot/src/: GitLabApi.hs  GitLabJobs.hs  GitlabJobs2.hs  Spuriobot.hs  SpuriousFailures.hs
spuriobot/src/Spuriobot/: Backfill.hs  DB.hs  FTS.hs  Foundation.hs  RetryJob.hs  RetryJob.hs-boot  SearchUI.hs  Spurio.hs
spuriobot/test/: Spec.hs
spuriobot/testdata/: event.json  jobinfo.json  malformed-event.json  no-spurio.json  project-creation-event.json  project-destroyed-event.json  project.json  retry-response.json  spurio-event.json  spurio-system_failure.json  success.json
spurious-failures/: README.md  ci-failure-update.hs  default.nix  fetch-job-data.hs  gtrace  job  queries.sql  trace  view_trace
