cabal-version:      2.4
name:               spurio-tooling
version:            0.1.0.0
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Bryan Richter
maintainer:         bryan@haskell.foundation
-- extra-source-files: CHANGELOG.md

common defaults
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    ghc-options: -rtsopts -threaded -with-rtsopts=-N10

common deps
    build-depends:
        aeson ^>=2.0.3 || ^>=1.5.6.0 || ^>=2.1.2,
        base ^>=4.15.1.0 || ^>=4.14.1.0 || ^>=4.15.1 || ^>=4.17.2,
        bytestring ^>=0.10.12 || ^>=0.11.5,
        http-client ^>=0.7.11,
        http-client-tls ^>=0.3.5.3,
        list-transformer ^>=1.0.7,
        modern-uri ^>=0.3.4,
        monad-par ^>=0.3.5,
        monad-par-extras ^>=0.3.3,
        req ^>=3.12.0,
        sqlite-simple ^>=0.4.18,
        stm ^>=2.5.0,
        text ^>=1.2.4.1 || ^>=2.0.2,
        time ^>=1.9.3 || ^>=1.13 || ^>=1.12.2

executable ci-failure-update
    import: defaults, deps
    main-is: ci-failure-update.hs

executable fetch-job-data
    import: defaults, deps
    main-is: fetch-job-data.hs

executable spread-spuriobot
    import: defaults, deps
    main-is: spread-spuriobot.hs
